--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -10,13 +10,13 @@
         <div>
             <p>published: 29.03.2021, 17:24</p>
             <h2><a href="">My first post</a></h2>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            <p>Я работаю в Первой линии. Я работник Первой линии. Я и есть Первая линия.</p>
         </div>
 
         <div>
             <p>published: 14.06.2014, 12:14</p>
             <h2><a href="">My second post</a></h2>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut f.</p>
+            <p>Я ЕСТЬ СМЕРТЬ!</p>
         </div>
     </body>
 </html>
